# projet_deeplearning

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  test.ipynb
data/fr-en/data/test/txt/: test.en
data/fr-en/data/test/vtt/: 0u7tTptBo9I.fr.vtt  dJ3-_mboZJQ.fr.vtt  tTcrwOjAo30.fr.vtt
data/fr-en/data/train/txt/: segments  train.en  train.fr  train.yaml
data/fr-en/data/train/vtt/: 2OOJgYrp3H4.fr.vtt  2jnzdMEwEks.fr.vtt  4aChB0O6AkY.fr.vtt  4hmPpzsaDpQ.fr.vtt  4zDoe9Ant24.fr.vtt  5QOBzSez8JU.fr.vtt  5nP3ZUrrsj0.fr.vtt  6aksyG60ODM.fr.vtt  7JINsdEk3Zw.fr.vtt  7PmmhzljJdw.fr.vtt  7pZzEryUIHk.fr.vtt  80HsFedGgFU.fr.vtt  8N-K6qs3VMI.fr.vtt  8tm7bG1AogE.fr.vtt  AYCZu8AR7IU.fr.vtt  BaV57KhjElw.fr.vtt  BcwSqZbNvRY.fr.vtt  CJqcVvxpPac.fr.vtt  EFRyiUZNW_0.fr.vtt  ERlqGlwXHGU.fr.vtt  Ed_fp9MqNDQ.fr.vtt  Eg0axOgIOBo.fr.vtt  Ek4V62VJU7c.fr.vtt  F2Qy3hl7O5k.fr.vtt  F3h0X-ERQXY.fr.vtt  FLTGL_tbHWg.fr.vtt  FbaNjlQtNr8.fr.vtt  H41DtHNZCr8.fr.vtt  HlkKYFLY-J8.fr.vtt  If92mr3B_Og.fr.vtt  J8PEymuDf6A.fr.vtt  JeBhNZSFqEw.fr.vtt  KTV6sI4mWW4.fr.vtt  KXZ6Kjr-nOY.fr.vtt  Km07gRO0Npg.fr.vtt  L9Kg6ddhKnw.fr.vtt  LVWUDLBYb-Q.fr.vtt  MLIDs9pZcAc.fr.vtt  MktX30x37V8.fr.vtt  N2u6EDwumdQ.fr.vtt  (+64 more)
data/fr-en/data/valid/txt/: valid.en
data/fr-en/data/valid/vtt/: 9fxo9YJhnG8.fr.vtt  (+2 more)
data/fr-en/docs/: statistics.txt
data/fr-es/docs/: statistics.txt
data/fr-pt/docs/: statistics.txt
output/srt/: output_de.srt  output_en.srt  output_es.srt  output_it.srt  output_pt.srt  test_output.srt  test_output_en.srt
src/: asr_pipeline.py  data_loader.py  lstm_baseline.py  metrics.py  nmt_pipeline.py
tests/: test_setup.py
(+882 files in other folders)
