[project]
name = "projet-deeplearning"
version = "0.1.0"
description = ""
authors = [
    {name = "PeltierDylan",email = "dylan.peltier.dp@gmail.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
